<resources>
    <string name="app_name">Desert Bus Shift Wallpaper</string>
    <string name="wallpaper_description">Displays the current Desert Bus For Hope shift as your wallpaper.</string>
    <string name="service_name">Desert Bus Shift Wallpaper</string>

    <string name="title_preferences">Preferences</string>

    <string name="pref_timezone_title">Time zone</string>
    <string name="pref_timezone_on">Use Moonbase time</string>
    <string name="pref_timezone_off">Use local time (not recommended)</string>

    <string name="pref_omega_title">Omega Shift</string>
    <string name="pref_omega_on">Periodically check for Omega Shift</string>
    <string name="pref_omega_off">Don\'t bother with Omega Shift</string>

    <string name="pref_omega_vintage_title">Use vintage Omega Shift banner</string>
    <string name="pref_omega_vintage_on">Use old quartered-circle banner</string>
    <string name="pref_omega_vintage_off">Use newer banner with road</string>

    <string name="pref_bee_shed_title">Rustproof Bee Shed</string>
    <string name="pref_bee_shed_on">Use Beta Flight and Dusk Guard</string>
    <string name="pref_bee_shed_off">Use Alpha Flight and Night Watch</string>

    <string name="pref_shaped_banners_title">Shaped banners</string>
    <string name="pref_shaped_banners_on">Banners will have their canon shapes</string>
    <string name="pref_shaped_banners_off">Banners will be fully rectangular</string>

    <string name="pref_darken_title">Darken wallpaper (percent)</string>

    <string name="omega_warning">Turning this on will cause periodic network calls to the VST to check if it\'s Omega Shift.  Even though the VST is generally on the ball with that, this won\'t check very frequently, so it might pick it up a few minutes late.  Also, this won\'t make any network calls at all unless it\'s November (or, for DB2026, October).</string>
    <string name="thats_fair">That\'s fair</string>
</resources>
