<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="TimeZone"
        android:persistent="true"
        android:summaryOff="@string/pref_timezone_off"
        android:summaryOn="@string/pref_timezone_on"
        android:title="@string/pref_timezone_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="AllowOmegaShift"
        android:persistent="true"
        android:summaryOff="@string/pref_omega_off"
        android:summaryOn="@string/pref_omega_on"
        android:title="@string/pref_omega_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="VintageOmegaShift"
        android:persistent="true"
        android:summaryOff="@string/pref_omega_vintage_off"
        android:summaryOn="@string/pref_omega_vintage_on"
        android:title="@string/pref_omega_vintage_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="RustproofBeeShed"
        android:persistent="true"
        android:summaryOff="@string/pref_bee_shed_off"
        android:summaryOn="@string/pref_bee_shed_on"
        android:title="@string/pref_bee_shed_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="ShapedBanners"
        android:persistent="true"
        android:summaryOff="@string/pref_shaped_banners_off"
        android:summaryOn="@string/pref_shaped_banners_on"
        android:title="@string/pref_shaped_banners_title" />
    <SeekBarPreference
        android:defaultValue="0"
        app:key="Darken"
        android:max="100"
        app:defaultValue="0"
        app:min="0"
        app:seekBarIncrement="5"
        app:showSeekBarValue="true"
        app:title="@string/pref_darken_title" />
</PreferenceScreen>